# kronos

./: .gitignore  .install_dirs.source  CMakeLists.txt  HISTORY.rst  INSTALL  INSTALL.rst  INSTALL_MODELLER.rst  MANIFEST.in  NOTICE  NOTICE.rst  README.rst  VERSION.cmake  conda_environment.txt  conda_environment_exe.txt  env_executor.sh  env_modeller.sh  install.sh  requirements.txt  setup.py  setup.py.in
.github/: ci-hpc-config.yml
.github/workflows/: ci.yml
cmake/: Findpmemio.cmake
config/: conf.json  conf_arctur.json  conf_dummy.json  conf_ecmwf.json  conf_ecmwf_lxg.json  conf_ecmwf_lxg_db.json  conf_ecmwf_lxg_dbscan.json  conf_empty.json  conf_epcc.json  conf_nebula.json  conf_user_workload_feedback.json  config.json.template  config_postproc.json.template  config_schema.json  dummy_config.json
dev/: bootstrap_local_env.sh  destroy_local_env.sh  run_lint.sh  run_tests.sh  run_tests_exe.sh
docs/: Makefile  NOTICE.rst  conf.py  index.rst  kronos.core.app_kernels.rst  kronos.core.config.config.rst  kronos.core.config.config_format.rst  kronos.core.config.rst  kronos.core.data_analysis.clust_DBSCAN.rst  kronos.core.data_analysis.clust_base.rst  kronos.core.data_analysis.clust_kmeans.rst  kronos.core.data_analysis.elbow_method.rst  kronos.core.data_analysis.recommender.rst  kronos.core.data_analysis.rst  kronos.core.data_analysis.silhouette.rst  kronos.core.examples.rst  kronos.core.examples.user_workload.rst  kronos.core.exceptions_iows.rst  kronos.core.fill_in_functions.rst  kronos.core.framework.rst  kronos.core.generator.rst  kronos.core.job_generation.rst  kronos.core.job_generation.schedule.rst  kronos.core.jobs.rst  kronos.core.kronos_tools.merge.rst  kronos.core.kronos_tools.print_colour.rst  kronos.core.kronos_tools.process_pool.rst  kronos.core.kronos_tools.rst  kronos.core.kronos_tools.time_format.rst  kronos.core.kronos_tools.time_pdf.rst  kronos.core.kronos_tools.utils.rst  kronos.core.logreader.base.rst  kronos.core.logreader.darshan.rst  kronos.core.logreader.dataset.rst  kronos.core.logreader.ipm.rst  kronos.core.logreader.profiler_reader.rst  kronos.core.logreader.rst  kronos.core.logreader.scheduler_reader.rst  kronos.core.logreader.stdout_ecmwf.rst  kronos.core.model.rst  (+97 more)
docs/executor/: config.rst  events.rst  index.rst  kschedule.rst
docs/ref/: index.rst  kronos_executor.rst  kronos_modeller.format_data_handlers.rst  kronos_modeller.post_process.export_config.rst  kronos_modeller.rst  kronos_modeller.run_control.rst  kronos_modeller.runner.rst
docs/synapp/: index.rst  input.rst  kernels.rst
examples/: composite.kschedule  file-io.kschedule  multi-serial-events-time.kschedule  multi-serial-events.kschedule  single-parallel.kschedule  single-serial.kschedule
examples/external_job/: README.rst  generate_kschedule.py  notify.py  run.sh  stepper.py  stepper_job.py  stepper_job.sh
input/: NOTE.txt  app_master.cpp  dummy_master.cpp  input.json
kronos-synapps/kronos/: CMakeLists.txt  coordinator.c  cpu.c  cpu.h  file_read.c  file_read.h  file_write.c  file_write.h  frames.h  fs_metadata.c  fs_metadata.h  global_config.c  global_config.h  json.c  json.h  kernels.c  kernels.h  kronos_version.c.in  kronos_version.h.in  memory.c  memory.h  mpi.c  mpi_kernel.c  notification.c  notification.h  stats.c  stats.h  synapp.c  trace.c  trace.h  utility.c  utility.h
kronos-synapps/tests/: CMakeLists.txt  test_factories.c  test_file_read.c  test_file_write.c  test_fs_metadata.c  test_json.c  test_mpi.c  test_stats.c
kronos/core/: app_kernels.py  fill_in_functions.py  generator.py  jobs.py  model.py  report.py  synthetic_app.py  time_signal.py  workload_data.py  workload_fill_in.py
kronos/executor/: __init__.py  base_job.py  event_dispatcher.py  event_manager.py  executor.py  (+13 more)
kronos_apps/: CMakeLists.txt
kronos_apps/common/: CMakeLists.txt  json.c  json.h  logger.c  logger.h
kronos_apps/common/network/: message.c  message.h  network.c  network.h
kronos_apps/common/tests/: test_logger.c
kronos_apps/ioserver/: CMakeLists.txt  io_data.c  io_data.h  io_executor.c  io_executor.h  io_task.c  io_task.h  io_task_read.c  io_task_read.h  io_task_read_nv.c  io_task_read_nv.h  io_task_write.c  io_task_write.h  io_task_write_nv.c  io_task_write_nv.h  network.c  network.h  nvram_layout.h  remote_io_master.c  remote_io_worker.c  terminate_io_worker.c
kronos_apps/ioserver/tests/: CMakeLists.txt  test_logger.c
kronos_apps/kronos/: CMakeLists.txt  cpu.c  cpu.h  file_read.c  file_read.h  file_write.c  file_write.h  frames.h  fs_metadata.c  fs_metadata.h  global_config.c  global_config.h  kernels.c  kernels.h  kronos_version.c.in  kronos_version.h.in  memory.c  memory.h  memory_persist.c  memory_persist.h  mpi_kernel.c  mpi_kernel.h  notification.c  notification.h  stats.c  stats.h  synapp.c  trace.c
kronos_apps/kronos/tests/: CMakeLists.txt  test_cpu.c  test_file_read.c  test_json.c  test_mpi.c  test_stats.c  test_utility.c
kronos_core/: generator.py  jobs.py  synthetic_app.py  time_signal.py
kronos_executor/: conda_env_executor.yml  conda_environment_exe.txt  executor.py  executor_events_par.py  executor_schedule.py  external_job.py  generate_read_files.py  global_config.py  job_submitter.py  setup.py  subprocess_callback.py
kronos_io/: profile_format.py  profile_schema.json  schedule_format.py  schedule_schema.json  schema_description.py
kronos_modeller/: app_kernels.py  conda_env_modeller.yml  conda_environment.txt  jobs.py  model.py  setup.py  synthetic_app.py  workload_data.py
kronos_synapps/: CMakeLists.txt
output/: .directory
src/: .directory  DummyWorkload.py  IOWSModel.py  IOWS_model.py  RealJob.py  RealWorkload.py  ScheduledJob.py  SyntheticApp.py  TimeSignal.py  WorkloadCorrector.py  app_kernels.py  dummy_workload.py  exceptions_iows.py  fill_in_functions.py  generator.py  iows.py  jobs.py  kpf_handler.py  kronos.py  kronos_ingest.py  kronos_model.py  ksf_handler.py  model.py  model_workload.py  plot_handler.py  real_job.py  real_workload.py  synthetic_app.py  time_signal.py  workload_corrector.py  workload_data.py  workload_fill_in.py
(+660 files in other folders)
